# src/types/index.ts
@@ -7,5 +7,4 @@ export * from "./profile";
 export * from "./profile-event-type";
 export * from "./organization";
 export * from "./user";
-export * from "./invitation";
 export * from "./api";
